// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardEmptyScreen renders correctly with edit mode 1`] = `
<div
  class="dshEditEmptyWidget"
  data-test-subj="emptyDashboardWidget"
  style="margin: 8px; height: 412px; width: calc(50% - 8px);"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-l-center-center-column"
    style="height: 100%;"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <span
        color="subdued"
        data-euiicon-type="visAreaStacked"
      />
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <h3
        class="euiTitle emotion-euiTitle-xs"
      >
        Add your first visualization
      </h3>
      <div
        class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
      />
      <div
        class="euiText emotion-euiText-s-euiTextColor-subdued"
      >
        <span>
          Create content that tells a story about your data.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DashboardEmptyScreen renders correctly with readonly mode 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-row-grow"
  data-test-subj="dashboardEmptyReadOnly"
  style="min-block-size: 460px; padding-block-start: 0;"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  >
    <section
      class="emotion-euiPageSection-grow-l-center-transparent"
    >
      <div
        class="emotion-euiPageSection__content-l-center"
      >
        <div
          class="euiPanel euiPanel--plain euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge emotion-euiPanel-m-plain-hasShadow"
          style="padding: 40px;"
        >
          <div
            class="euiEmptyPrompt__main"
          >
            <div
              class="euiEmptyPrompt__content"
            >
              <div
                class="euiEmptyPrompt__contentInner"
              >
                <div
                  class="euiText emotion-euiText-m-euiTextColor-subdued"
                >
                  <figure
                    class="euiImageWrapper emotion-euiImageWrapper"
                  >
                    <img
                      alt=""
                      class="euiImage emotion-euiImage-original"
                      src="/plugins/home/assets/welcome_graphic_light_2x.png"
                    />
                  </figure>
                  <div
                    class="euiText emotion-euiText-m"
                  >
                    <p
                      style="font-weight: bold;"
                    >
                      This dashboard is empty.
                    </p>
                  </div>
                  <div
                    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
                  />
                  <div
                    class="euiText emotion-euiText-m-euiTextColor-subdued"
                  >
                    <p>
                      You need additional privileges to edit this dashboard.
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </main>
</div>
`;

exports[`DashboardEmptyScreen renders correctly with view mode 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-row-grow"
  data-test-subj="dashboardEmptyReadWrite"
  style="min-block-size: 460px; padding-block-start: 0;"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  >
    <section
      class="emotion-euiPageSection-grow-l-center-transparent"
    >
      <div
        class="emotion-euiPageSection__content-l-center"
      >
        <div
          class="euiPanel euiPanel--plain euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge emotion-euiPanel-m-plain-hasShadow"
          style="padding: 40px;"
        >
          <div
            class="euiEmptyPrompt__main"
          >
            <div
              class="euiEmptyPrompt__content"
            >
              <div
                class="euiEmptyPrompt__contentInner"
              >
                <div
                  class="euiText emotion-euiText-m-euiTextColor-subdued"
                >
                  <figure
                    class="euiImageWrapper emotion-euiImageWrapper"
                  >
                    <img
                      alt=""
                      class="euiImage emotion-euiImage-original"
                      src="/plugins/home/assets/welcome_graphic_light_2x.png"
                    />
                  </figure>
                  <div
                    class="euiText emotion-euiText-m"
                  >
                    <p
                      style="font-weight: bold;"
                    >
                      This dashboard is empty. Let’s fill it up!
                    </p>
                  </div>
                  <div
                    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
                  />
                  <div
                    class="euiText emotion-euiText-m-euiTextColor-subdued"
                  >
                    <p>
                      Click edit in the menu bar above to start adding panels.
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </main>
</div>
`;
